# bss-request-manager

./: .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  MIGRATION_PLAN.md  Pipfile  README.md  crontab  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  manage.py  sample.env
backend/: .coveragerc  .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  crontab  manage.py  pyproject.toml  pytest.ini  sample.env  schema.yaml
backend/api/: urls.py
backend/api/v1/: urls.py
backend/api/v1/admin/: helpers.py  serializers.py  urls.py
backend/api/v1/admin/management/: serializers.py  urls.py  views.py
backend/api/v1/admin/requests/: filters.py  helpers.py  serializers.py  urls.py  views.py
backend/api/v1/admin/requests/comments/: serializers.py  views.py
backend/api/v1/admin/requests/crew/: serializers.py  views.py
backend/api/v1/admin/requests/ratings/: serializers.py  views.py
backend/api/v1/admin/requests/requests/: serializers.py  views.py
backend/api/v1/admin/requests/videos/: serializers.py  views.py
backend/api/v1/admin/statistics/: serializers.py  urls.py  views.py
backend/api/v1/admin/todos/: serializers.py  views.py
backend/api/v1/admin/users/: filters.py  serializers.py  urls.py  views.py
backend/api/v1/login/: serializers.py  urls.py  views.py
backend/api/v1/me/: serializers.py  urls.py  views.py
backend/api/v1/misc/: serializers.py  urls.py  views.py
backend/api/v1/requests/: filters.py  routers.py  serializers.py  urls.py  utilities.py  views.py
backend/api/v1/requests/comments/: serializers.py  views.py
backend/api/v1/requests/ratings/: serializers.py  views.py
backend/api/v1/requests/requests/: serializers.py  views.py
backend/api/v1/requests/videos/: serializers.py  views.py
backend/api/v1/tests/: tests_admin_api.py  tests_default_api.py  tests_utils.py
backend/api/v1/users/: serializers.py  urls.py  views.py
backend/common/: __init__.py  admin.py  apps.py  authentication.py  emails.py  health_checks.py  middleware.py  models.py  pagination.py  permissions.py  schemas.py  serializers.py  signals.py  social_pipeline.py  tests.py  utilities.py
backend/common/management/commands/: create_default_user.py  google_calendar.py  sync_bss_users.py  sync_ldap.py
backend/common/migrations/: 0001_initial.py  0002_alter_ban_reason.py  0003_alter_ban_creator.py
backend/common/rest_framework/: authentication.py  exception.py  pagination.py  permissions.py  routers.py  turnstile.py
backend/common/social_core/: backends.py  helpers.py  pipeline.py  strategy.py
backend/common/templatetags/: extra_tags.py
backend/core/: celery.py  tasks.py  urls.py  wsgi.py
backend/core/settings/: _auth.py  _auth_ldap.py  _auth_social.py  base.py  ci.py  common.py  debug.py  development.py  production.py  staging.py  test.py
backend/credentials/: .placeholder
backend/locale/hu/LC_MESSAGES/: django.mo  django.po
backend/logs/: .placeholder
backend/manager/: celery.py  settings.py  tasks.py  urls.py  wsgi.py
backend/manager/settings/: common.py  development.py  production.py  test.py
backend/staticfiles/: .placeholder
backend/templates/admin/: login.html
backend/templates/email/html/: contact_message.html  crew_daily_reminder.html  crew_new_comment.html  crew_request_modified.html  email_base.html  production_manager_unfinished_requests.html  responsible_overdue_request.html  staff_todo_assigned.html  staff_weekly_tasks.html  user_new_comment.html  user_new_request_confirmation.html  user_video_published.html
backend/templates/email/txt/: contact_message.txt  crew_daily_reminder.txt  crew_new_comment.txt  crew_request_modified.txt  production_manager_unfinished_requests.txt  responsible_overdue_request.txt  staff_todo_assigned.txt  staff_weekly_tasks.txt  user_new_comment.txt  user_new_request_confirmation.txt  user_video_published.txt
backend/tests/: conftest.py  email_sending_tests.py  livez_tests.py  login_api_tests.py  misc_api_tests.py  model_tests.py  no_recaptcha_pytest.py  readyz_tests.py  requests_api_admin_tests.py  requests_api_default_pytest.py  requests_api_default_tests.py  requests_api_external_tests.py  requests_api_filters_tests.py  requests_utilities_tests.py  settings.py  statistics_api_tests.py  tests_api_admin.py  tests_api_admin_requests.py  tests_api_default.py  tests_api_default_requests.py  tests_api_login.py  tests_api_utils.py  users_api_tests.py  users_test_utils.py  video_requests_test_utils.py
backend/tests/api/: conftest.py  helpers.py
backend/tests/api/v1/: pagination_tests.py
backend/tests/api/v1/admin/requests/: admin_comments_tests.py  admin_crew_tests.py  admin_ratings_tests.py  admin_requests_tests.py  admin_videos_tests.py  comments_tests.py  crew_tests.py  filter_order_search_tests.py  history_tests.py  ratings_tests.py  requests_tests.py  videos_tests.py
backend/tests/api/v1/admin/todos/: admin_todos_tests.py  (+1 more)
backend/tests/api/v1/login/: login_oauth2_tests.py  login_tests.py  logout_tests.py
backend/tests/api/v1/me/: me_tests.py
backend/tests/api/v1/misc/: contact_tests.py
backend/tests/api/v1/requests/: comments_tests.py  ratings_tests.py  requests_tests.py  videos_tests.py
backend/tests/helpers/: test_utils.py  users_test_utils.py  video_requests_test_utils.py
backend/video_requests/: __init__.py  admin.py  apps.py  choices.py  emails.py  models.py  schemas.py  services.py  signals.py  test_utils.py  tests.py  utilities.py
backend/video_requests/management/commands/: email_daily_reminders.py  email_overdue_requests.py  email_unfinished_requests.py  email_weekly_tasks.py  update_request_status.py
backend/video_requests/migrations/: 0001_initial.py  0002_add_request_requested_by.py  0002_auto_20210930_1322.py  0003_update_request_requested_by_data.py  0004_alter_request_requested_by.py  0005_bump_simple_history_version.py  0006_add_todos.py  0007_add_new_todo_status.py  0007_add_status_index_fix_related_names.py  0008_add_todo_status_index.py
(+547 files in other folders)
