[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "bss-request-manager-backend"
authors = [
    {name = "Olivér Kecskeméty", email = "kecskemety.oliver@simonyi.bme.hu"}
]
description = "Workflow Support System for managing video shooting, filming and live streaming requests of Budavári Schönherz Stúdió."
requires-python = ">=3.13"
dependencies = [
    "celery[redis]==5.4.0",
    "django==5.1.4",
    "djangorestframework==3.15.2",
    "djangorestframework_simplejwt==5.3.1",
    "django-cacheops==7.1",
    "django-celery-results==2.5.1",
    "django-cors-headers==4.6.0",
    "django-filter==24.3",
    "django-health-check==3.18.3",
    "django-phonenumber-field[phonenumbers]==8.0.0",
    "django-simple-history==3.7.0",
    "drf-recaptcha==4.0.2",
    "drf-spectacular==0.28.0",
    "google-api-python-client==2.158.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "jsonschema[format]==4.23.0",
    "libgravatar==1.0.4",
    "python-decouple==3.8",
    "requests==2.32.3",
    "sentry-sdk==2.19.2",
    "social-auth-app-django==5.4.2",
    "whitenoise[brotli]==6.8.2"
]

[tool.coverage.report]
fail_under = 90
ignore_errors = true
show_missing = true
skip_covered = true
omit = [
    "core/*",
    "tests/*",
    "*/migrations/*",
    "*/admin.py",
    "*/tests.py",
    "common/health_checks.py",
    "manage.py",
]
exclude_lines = [
    "pragma: no cover",
    'if getattr.*"swagger_fake_view".*',
    "return .*[.]none[(][)]]",
]

[tool.coverage.run]
branch = true
source = ["."]

[tool.flake8]
max-line-length = 88
max-complexity = 15
ignore = ["E203", "E501", "W503"]
per-file-ignores = [
    "backend/core/settings/*.py: F403,F405",
    "backend/common/apps.py: F401",
    "backend/video_requests/apps.py: F401"
]

[tool.isort]
profile = "black"

[tool.poetry]
package-mode = false

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
pytest-github-actions-annotate-failures = "0.2.0"

[tool.poetry.group.debug.dependencies]
django-debug-toolbar = "4.4.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
psycopg = {extras = ["binary"], version = "3.2.3"}

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "23.0.0"
psycopg = {extras = ["c"], version = "3.2.3"}

[tool.poetry.group.test.dependencies]
model_bakery = "1.20.0"
pytest = "8.3.4"
pytest-cov = "6.0.0"
pytest-django = "4.9.0"
pytest-xdist = {extras = ["psutil"], version = "3.6.1"}
responses = "0.25.3"
time-machine = "2.16.0"

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term --cov-report xml -n auto"
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = "tests.py test_*.py *_tests.py"
python_classes= ""
